updating cursor pagination
